# chrome-extensions-rs

./: Cargo.toml  README.md  TESTS.md
.github/workflows/: build.yml
crates/chrome-extensions/: Cargo.toml
crates/chrome-extensions/src/: accessibility_features.rs  action.rs  app.rs  app_view_guest_internal.rs  bookmarks.rs  browser_action.rs  browsing_data.rs  chrome_web_view_internal.rs  commands.rs  content_settings.rs  context_menus.rs  cookies.rs  debugger.rs  declarative_content.rs  declarative_web_request.rs  desktop_capture.rs  dom.rs  events.rs  extension.rs  extension_types.rs  extensions_manifest_types.rs  file_browser_handler.rs  font_settings.rs  gcm.rs  guest_view_internal.rs  history.rs  i18n.rs  idle.rs  incognito.rs  input_ime.rs  instance_id.rs  lib.rs  management.rs  manifest_types.rs  metrics_private_individual_apis.rs  mime_handler_view_guest_internal.rs  omnibox.rs  page_action.rs  page_capture.rs  permissions.rs  (+21 more)
crates/chrome-idl-parser/: Cargo.toml
crates/chrome-idl-parser/src/: json.rs  lib.rs  utils.rs
js_tests/: jest.config.cjs  jest.setup.js  package.json  tsconfig.json  windows.test.ts
