[package]
name = "chrome-idl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.2"
proc-macro2 = "1.0.78"
quote = "1.0.35"
